--- a/.github/workflows/build_rpm.yml
+++ b/.github/workflows/build_rpm.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Install dependencies
       run: |
@@ -31,8 +31,8 @@ jobs:
         
         # 创建源码目录并打包
         mkdir -p ${NAME}-${VERSION}
-        # 复制 pingora_cache 目录下的所有内容到源码目录
-        cp -r pingora_cache/* ${NAME}-${VERSION}/
+        # 复制项目文件到源码目录
+        cp -r src Cargo.toml Cargo.lock pingora.service rpm ${NAME}-${VERSION}/
         
         # 打包成 tar.gz
         tar -czf ~/rpmbuild/SOURCES/${NAME}-${VERSION}.tar.gz ${NAME}-${VERSION}
@@ -40,13 +40,13 @@ jobs:
     - name: Build RPM
       run: |
         # 复制 spec 文件到 SPECS 目录
-        cp pingora_cache/rpm/pingora_cache_proxy.spec ~/rpmbuild/SPECS/
+        cp rpm/pingora_cache_proxy.spec ~/rpmbuild/SPECS/
         
         # 执行构建
         rpmbuild -bb ~/rpmbuild/SPECS/pingora_cache_proxy.spec
 
     - name: Upload RPM Artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: pingora-rpm
         path: ~/rpmbuild/RPMS/**/*.rpm
