Fix artifact upload path: copy RPMs to workspace

--- a/.github/workflows/build_rpm.yml
+++ b/.github/workflows/build_rpm.yml
@@ -44,9 +44,13 @@ jobs:
         
         # 执行构建
         rpmbuild -bb ~/rpmbuild/SPECS/pingora_cache_proxy.spec
+        
+        # 复制构建结果到当前工作目录，方便上传
+        mkdir -p rpms
+        cp -r ~/rpmbuild/RPMS/* rpms/
 
     - name: Upload RPM Artifact
       uses: actions/upload-artifact@v4
       with:
         name: pingora-rpm
-        path: ~/rpmbuild/RPMS/**/*.rpm
+        path: rpms/**/*.rpm
